# ghagen

./: .ghagen.lock.yml  .ghagen.yml  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .release-please-manifest.json  404.html  AGENTS.md  CHANGELOG.md  CONTEXT-MAP.md  LICENSE  README.md  ROADMAP.md  action.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  release-please-config.json  sitemap.xml
.github/: ghagen.lock.toml  ghagen.toml  ghagen_workflows.py
.github/workflows/: ci.yml  docs.yml  release.yml  schema-drift.yml
api/helpers/: index.html
api/job/: index.html
api/permissions/: index.html
api/step/: index.html
api/triggers/: index.html
api/workflow/: index.html
check-deps/: action.yml
check-synth/: action.yml
cli/: index.html
comments/: index.html
cookbook/: index.html
docs/: architecture-deepening-plan.md  astro.config.mjs  cli.md  comments.md  concepts.md  cookbook.md  dry-patterns.md  escape-hatches.md  faq.md  getting-started.md  index.md  linting.md  package-lock.json  package.json
docs/adr/: 0001-document-serialization-seam.md  0002-no-construction-time-config-globals.md  0003-schema-sync-dev-only-and-test-based-conformance.md  0004-user-file-tracking-via-jiti-cache-diff.md
docs/agents/: domain.md
docs/api/: helpers.md  job.md  permissions.md  step.md  triggers.md  workflow.md
docs/specs/: 0001-python-single-pass-serialization.md  0002-narrow-transform-interface.md  0003-comment-attachment-module.md  0004-unified-root-discovery.md  0005-typed-engine-report-seam.md
docs/src/content/docs/: cookbook.mdx  faq.mdx  getting-started.mdx  index.mdx
docs/src/content/docs/guides/: comments.mdx  cookbook.mdx  dry-patterns.mdx  escape-hatches.mdx
docs/src/content/docs/python/: cli.md  linting.md
docs/superpowers/specs/: 2026-04-10-dependency-update-action-design.md
dry-patterns/: index.html
escape-hatches/: index.html
faq/: index.html
fixtures/expected/: ci_basic.yml  comments.yml  docker_action.yml  escape_hatches.yml  full_featured.yml  matrix_complex.yml  multiline_run.yml  triple_quoted_run.yml  upgrade_issue_body.md  upgrade_pr_body.md  upgrade_report.json
fixtures/schema/: action_schema.json  workflow_schema.json
getting-started/: index.html
linting/: index.html
schema/: conformance-gaps.yml  manifest.json
scripts/: docs-dev.sh  fmt.sh  lint.sh  test.sh  typecheck.sh
search/: search_index.json
src/ghagen/: __init__.py  _raw.py  app.py  config.py
src/ghagen/cli/: main.py
src/ghagen/emitter/: header.py  key_order.py  yaml_writer.py
src/ghagen/helpers/: expressions.py  steps.py
src/ghagen/lint/: __init__.py  config.py  engine.py  violation.py
src/ghagen/lint/rules/: __init__.py  _base.py  duplicate_step_ids.py  missing_permissions.py  unpinned_actions.py
src/ghagen/models/: _base.py  action.py  container.py  job.py  step.py  trigger.py  workflow.py
src/ghagen/pin/: __init__.py  collect.py  resolve.py  transform.py
src/ghagen/schema/: codegen.py  diff.py  fetch.py
superpowers/specs/2026-04-10-dependency-update-action-design/: index.html
tests/: test_config.py  test_paths.py
tests/snapshots/: comments.yml  composite_action.yml  matrix_complex.yml  node_action.yml
tests/test_cli/: test_lint.py  test_main.py  test_pin.py
tests/test_emitter/: test_header.py  test_yaml_writer.py
tests/test_helpers/: test_expressions.py  test_steps.py
tests/test_integration/: conftest.py  test_action.py  test_full_workflow.py  test_snapshots.py
tests/test_lint/: test_engine.py  test_rule_base.py
tests/test_lint/test_rules/: test_duplicate_step_ids.py  test_missing_permissions.py
tests/test_models/: test_step.py  test_workflow.py
tests/test_pin/: test_collect.py  test_integration.py  test_lint_integration.py  test_outdated.py  test_resolve.py  test_transform.py
tests/test_schema/: test_codegen.py  test_diff.py  test_fetch.py
update-action/: action.yml
(+8 files in other folders)
